jillegal impl for version 3.0-SNAPSHOT